# mm

./: .gitignore  MOBILE_SWIFT_SUMMARY.md  README.md  SEARCH_BAR_FEATURE.md  com.nadeem.mm.plist  copyparty-setup.md  crontab.txt  export-plan.md  local_first_plan.md  package.json  plan.md  quick-recommend.md  setup.sh  start-mm.sh  todo.md  wake-gtx1080build.sh
.github/: IOS_BUILD_SETUP.md
backend/: .env.example  alembic.ini  auth.py  database.py  drizzle.config.ts  main.py  main_old.py  models.py  package.json  pyproject.toml
cloudflare-dns-update/: .gitignore  script.py  setup.sh
docs/: BUILD_CYCLE_FIX.md  CHANGELOG_WORKFLOW.md  CLEAN_SOLUTION.md  CRITICAL_FIXES.md  EAS_BUILD_GUIDE.md  EAS_SELF_SIGNED.md  FINAL_FIX.md  FINAL_SOLUTION.md  IOS_BUILD_GUIDE.md  MIGRATION_CHECKLIST.md  QUICK_START.md  README.md  SDK_IMPROVEMENTS.md  altserver.md  audit-report.md  search-bar-ui-diagram.md
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
gymbo/: .gitignore  README.md  com.nadeem.gymbo.plist  package.json  setup.sh  (+1 more)
gymbo/backend/: pyproject.toml
gymbo/backend/alembic/: env.py
gymbo/backend/alembic/versions/: 0004_exercise_tracking_fields.py
gymbo/backend/app/: __init__.py
gymbo/backend/app/api/: router.py
gymbo/backend/app/api/routers/: backup.py  health.py  metrics.py  sessions.py  sync.py  templates.py  workout_types.py
gymbo/backend/app/schemas/: exercises.py  schedule.py  sessions.py  templates.py
gymbo/backend/app/services/: backup.py  notifications.py  security.py
(+505 files in other folders)
