[project]
name = "gymbo-backend"
version = "0.1.0"
description = "Gymbo backend"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.1",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.3",
    "fastapi>=0.128.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.40.0",
    "python-jose[cryptography]>=3.3.0",
]
